// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`dehydrate > dehydrate V1 'string' undefined > optimized 1`] = `
"[
"Flatpack JSON v1",
"string"
]
"
`;

exports[`dehydrate > dehydrate V1 'string' undefined 1`] = `
"[
"Flatpack JSON v1",
"string"
]
"
`;

exports[`dehydrate > dehydrate V1 /[\\p{L}\\p{M}]+/gu undefined > optimized 1`] = `
"[
"Flatpack JSON v1",
[6,2,3],
"[\\\\p{L}\\\\p{M}]+",
"gu"
]
"
`;

exports[`dehydrate > dehydrate V1 /[\\p{L}\\p{M}]+/gu undefined 1`] = `
"[
"Flatpack JSON v1",
[6,2,3],
"[\\\\p{L}\\\\p{M}]+",
"gu"
]
"
`;

exports[`dehydrate > dehydrate V1 [ 'apple', 'banana', 'apple', 'banana', 'apple', 'pineapple' ] undefined > optimized 1`] = `
"[
"Flatpack JSON v1",
[0,2,3,2,3,2,4],
"apple",
"banana",
"pineapple"
]
"
`;

exports[`dehydrate > dehydrate V1 [ 'apple', 'banana', 'apple', 'banana', 'apple', 'pineapple' ] undefined 1`] = `
"[
"Flatpack JSON v1",
[0,2,3,2,3,2,4],
"apple",
"banana",
"pineapple"
]
"
`;

exports[`dehydrate > dehydrate V1 [ /[\\p{L}\\p{M}]+/gu, /[\\p{L}\\p{M}]+/gu, /[\\p{Lu}\\p{M}]+/gu ] undefined > optimized 1`] = `
"[
"Flatpack JSON v1",
[0,2,2,5],
[6,4,3],
"gu",
"[\\\\p{L}\\\\p{M}]+",
[6,6,3],
"[\\\\p{Lu}\\\\p{M}]+"
]
"
`;

exports[`dehydrate > dehydrate V1 [ /[\\p{L}\\p{M}]+/gu, /[\\p{L}\\p{M}]+/gu, /[\\p{Lu}\\p{M}]+/gu ] undefined 1`] = `
"[
"Flatpack JSON v1",
[0,2,2,5],
[6,3,4],
"[\\\\p{L}\\\\p{M}]+",
"gu",
[6,6,4],
"[\\\\p{Lu}\\\\p{M}]+"
]
"
`;

exports[`dehydrate > dehydrate V1 [ { a: 'a', b: 'b' }, { a: 'a', b: 'b' }, { a: 'a', b: 'b' }, …(1) ] { dedupe: false } > optimized 1`] = `
"[
"Flatpack JSON v1",
[0,4,7,10,13],
"a",
"b",
[1,5,6],
[0,2,3],[0,2,3],
[1,8,9],
[0,2,3],[0,2,3],
[1,11,12],
[0,2,3],[0,2,3],
[1,14,15],
[0,2,3],[0,2,3]
]
"
`;

exports[`dehydrate > dehydrate V1 [ { a: 'a', b: 'b' }, { a: 'a', b: 'b' }, { a: 'a', b: 'b' }, …(1) ] { dedupe: false } 1`] = `
"[
"Flatpack JSON v1",
[0,2,7,10,13],
[1,3,6],
[0,4,5],
"a",
"b",
[0,4,5],
[1,8,9],
[0,4,5],[0,4,5],
[1,11,12],
[0,4,5],[0,4,5],
[1,14,15],
[0,4,5],[0,4,5]
]
"
`;

exports[`dehydrate > dehydrate V1 [ { a: 'a', b: 'b' }, { a: 'c', b: 'd' }, { b: 'b', a: 'a' }, …(2) ] undefined > optimized 1`] = `
"[
"Flatpack JSON v1",
[0,3,7,3,2,4],
[0,5,6],
[1,2,2],
[0,8,9],
"a",
"b",
[1,2,4],
"c",
"d"
]
"
`;

exports[`dehydrate > dehydrate V1 [ { a: 'a', b: 'b' }, { a: 'c', b: 'd' }, { b: 'b', a: 'a' }, …(2) ] undefined 1`] = `
"[
"Flatpack JSON v1",
[0,2,6,2,3,7],
[1,3,3],
[0,4,5],
"a",
"b",
[1,3,7],
[0,8,9],
"c",
"d"
]
"
`;

exports[`dehydrate > dehydrate V1 [ {}, {}, {} ] undefined > optimized 1`] = `
"[
"Flatpack JSON v1",
[0,2,2,2],
{}
]
"
`;

exports[`dehydrate > dehydrate V1 [ {}, {}, {} ] undefined 1`] = `
"[
"Flatpack JSON v1",
[0,2,2,2],
{}
]
"
`;

exports[`dehydrate > dehydrate V1 [ 1, 2 ] undefined > optimized 1`] = `
"[
"Flatpack JSON v1",
[0,2,3],
1,
2
]
"
`;

exports[`dehydrate > dehydrate V1 [ 1, 2 ] undefined 1`] = `
"[
"Flatpack JSON v1",
[0,2,3],
1,
2
]
"
`;

exports[`dehydrate > dehydrate V1 [ 1n, 'hello', /\\w+/g, {}, [], 'hello' ] undefined > optimized 1`] = `
"[
"Flatpack JSON v1",
[0,3,2,7,10,11,2],
[1,0,6],
[1,0,4],
[8,5],
1,
"hello",
[6,8,9],
"\\\\w+",
"g",
{},
[0]
]
"
`;

exports[`dehydrate > dehydrate V1 [ 1n, 'hello', /\\w+/g, {}, [], 'hello' ] undefined 1`] = `
"[
"Flatpack JSON v1",
[0,2,5,7,10,11,5],
[1,0,3],
[8,4],
1,
[1,0,6],
"hello",
[6,8,9],
"\\\\w+",
"g",
{},
[0]
]
"
`;

exports[`dehydrate > dehydrate V1 [ 1n, 2n, 1n, 2n, 9007199254740991n, -9007199254740991n, …(2) ] undefined > optimized 1`] = `
"[
"Flatpack JSON v1",
[0,2,3,2,3,7,9,11,12],
[8,5],
[8,6],
"9007199254740992",
1,
2,
[8,8],
9007199254740991,
[8,10],
-9007199254740991,
[8,4],
[8,14],
"-",
[2,13,4]
]
"
`;

exports[`dehydrate > dehydrate V1 [ 1n, 2n, 1n, 2n, 9007199254740991n, -9007199254740991n, …(2) ] undefined 1`] = `
"[
"Flatpack JSON v1",
[0,2,4,2,4,6,8,10,12],
[8,3],
1,
[8,5],
2,
[8,7],
9007199254740991,
[8,9],
-9007199254740991,
[8,11],
"9007199254740992",
[8,14],
"-",
[2,13,11]
]
"
`;

exports[`dehydrate > dehydrate V1 [ Array(3) ] undefined > optimized 1`] = `
"[
"Flatpack JSON v1",
[0,2,2,3],
[7,1704067200000],
[7,1704153600000]
]
"
`;

exports[`dehydrate > dehydrate V1 [ Array(3) ] undefined 1`] = `
"[
"Flatpack JSON v1",
[0,2,2,3],
[7,1704067200000],
[7,1704153600000]
]
"
`;

exports[`dehydrate > dehydrate V1 [] undefined > optimized 1`] = `
"[
"Flatpack JSON v1",
[0]
]
"
`;

exports[`dehydrate > dehydrate V1 [] undefined 1`] = `
"[
"Flatpack JSON v1",
[0]
]
"
`;

exports[`dehydrate > dehydrate V1 { a: [ 1 ] } undefined > optimized 1`] = `
"[
"Flatpack JSON v1",
[1,2,4],
[0,3],
"a",
[0,5],
[0,6],
1
]
"
`;

exports[`dehydrate > dehydrate V1 { a: [ 1 ] } undefined 1`] = `
"[
"Flatpack JSON v1",
[1,2,4],
[0,3],
"a",
[0,5],
[0,6],
1
]
"
`;

exports[`dehydrate > dehydrate V1 { a: { a: 'a', b: 'b' }, b: { a: 'c', b: 'd' }, …(11) } undefined > optimized 1`] = `
"[
"Flatpack JSON v1",
[1,18,29],
[0,8,9],
[6,32,33],
[1,2,2],
[1,2,6],
[0,30,31],
[0,4,5,4,2,6,3,16],
"a",
"b",
"r",
[0,12,13,14],
"apple",
"banana",
"pineapple",
[5,2,2],
[1,34,36],
[4,39],
[0,8,9,19,20,21,22,23,24,10,25,26,27,28],
"cValues",
"m",
"mm",
"n",
"nn",
"nnn",
"rValues",
"s",
"ss",
"values",
[0,4,5,11,15,15,7,7,7,3,37,17,17,11],
"c",
"d",
"[\\\\p{L}\\\\p{M}]+",
"gu",
[0,10,35],
"rr",
[0,3,3],
[0,14,13,12],
[1,2,2],
[0,4,5,38,2,6,3,16]
]
"
`;

exports[`dehydrate > dehydrate V1 { a: { a: 'a', b: 'b' }, b: { a: 'c', b: 'd' }, …(11) } undefined 1`] = `
"[
"Flatpack JSON v1",
[1,2,16],
[0,3,4,5,6,7,8,9,10,11,12,13,14,15],
"a",
"b",
"cValues",
"m",
"mm",
"n",
"nn",
"nnn",
"r",
"rValues",
"s",
"ss",
"values",
[0,17,19,23,27,27,28,28,28,29,36,37,37,23],
[1,18,18],
[0,3,4],
[1,18,20],
[0,21,22],
"c",
"d",
[0,24,25,26],
"apple",
"banana",
"pineapple",
[5,18,18],
[0,17,19,17,18,20,29,32],
[6,30,31],
"[\\\\p{L}\\\\p{M}]+",
"gu",
[1,33,35],
[0,11,34],
"rr",
[0,29,29],
[0,26,25,24],
[4,39],
[1,18,18],
[0,17,19,38,18,20,29,32]
]
"
`;

exports[`dehydrate > dehydrate V1 { a: { a: 'a', b: 42 } } undefined > optimized 1`] = `
"[
"Flatpack JSON v1",
[1,3,4],
"a",
[0,2],
[0,5],
[1,6,8],
[0,2,7],
"b",
[0,2,9],
42
]
"
`;

exports[`dehydrate > dehydrate V1 { a: { a: 'a', b: 42 } } undefined 1`] = `
"[
"Flatpack JSON v1",
[1,2,4],
[0,3],
"a",
[0,5],
[1,6,8],
[0,3,7],
"b",
[0,3,9],
42
]
"
`;

exports[`dehydrate > dehydrate V1 { a: { b: 1 } } undefined > optimized 1`] = `
"[
"Flatpack JSON v1",
[1,2,4],
[0,3],
"a",
[0,5],
[1,6,8],
[0,7],
"b",
[0,9],
1
]
"
`;

exports[`dehydrate > dehydrate V1 { a: { b: 1 } } undefined 1`] = `
"[
"Flatpack JSON v1",
[1,2,4],
[0,3],
"a",
[0,5],
[1,6,8],
[0,7],
"b",
[0,9],
1
]
"
`;

exports[`dehydrate > dehydrate V1 { a: 1 } undefined > optimized 1`] = `
"[
"Flatpack JSON v1",
[1,2,4],
[0,3],
"a",
[0,5],
1
]
"
`;

exports[`dehydrate > dehydrate V1 { a: 1 } undefined 1`] = `
"[
"Flatpack JSON v1",
[1,2,4],
[0,3],
"a",
[0,5],
1
]
"
`;

exports[`dehydrate > dehydrate V1 { fruit: [ 'apple', 'banana', 'apple', 'banana', 'apple', 'pineapple' ], …(2) } undefined > optimized 1`] = `
"[
"Flatpack JSON v1",
[1,5,9],
"apple",
"banana",
"pineapple",
[0,6,7,8],
"fruit",
"joinFruit",
"sentence",
[0,10,13,14],
[0,2,3,2,3,2,4],
"-banana-apple-banana-apple-",
[2,11,4],
[2,2,12],
"There is a bit of fruit on the table. Some banana, apple, and pineapple."
]
"
`;

exports[`dehydrate > dehydrate V1 { fruit: [ 'apple', 'banana', 'apple', 'banana', 'apple', 'pineapple' ], …(2) } undefined 1`] = `
"[
"Flatpack JSON v1",
[1,2,6],
[0,3,4,5],
"fruit",
"joinFruit",
"sentence",
[0,7,13,14],
[0,8,9,8,9,8,10],
"apple",
"banana",
"pineapple",
"-banana-apple-banana-apple-",
[2,11,10],
[2,8,12],
"There is a bit of fruit on the table. Some banana, apple, and pineapple."
]
"
`;

exports[`dehydrate > dehydrate V1 { values: [ 'apple', 'banana', 'pineapple' ], …(1) } undefined > optimized 1`] = `
"[
"Flatpack JSON v1",
[1,3,6],
[0,8,9,10],
[0,4,5],
"set",
"values",
[0,7,2],
[4,2],
"apple",
"banana",
"pineapple"
]
"
`;

exports[`dehydrate > dehydrate V1 { values: [ 'apple', 'banana', 'pineapple' ], …(1) } undefined 1`] = `
"[
"Flatpack JSON v1",
[1,2,5],
[0,3,4],
"set",
"values",
[0,6,7],
[4,7],
[0,8,9,10],
"apple",
"banana",
"pineapple"
]
"
`;

exports[`dehydrate > dehydrate V1 {} undefined > optimized 1`] = `
"[
"Flatpack JSON v1",
{}
]
"
`;

exports[`dehydrate > dehydrate V1 {} undefined 1`] = `
"[
"Flatpack JSON v1",
{}
]
"
`;

exports[`dehydrate > dehydrate V1 1 undefined > optimized 1`] = `
"[
"Flatpack JSON v1",
1
]
"
`;

exports[`dehydrate > dehydrate V1 1 undefined 1`] = `
"[
"Flatpack JSON v1",
1
]
"
`;

exports[`dehydrate > dehydrate V1 1.1 undefined > optimized 1`] = `
"[
"Flatpack JSON v1",
1.1
]
"
`;

exports[`dehydrate > dehydrate V1 1.1 undefined 1`] = `
"[
"Flatpack JSON v1",
1.1
]
"
`;

exports[`dehydrate > dehydrate V1 Map{ 'apple' => 1, 'banana' => 2, 'pineapple' => 3 } undefined > optimized 1`] = `
"[
"Flatpack JSON v1",
[5,2,6],
[0,3,4,5],
"apple",
"banana",
"pineapple",
[0,7,8,9],
1,
2,
3
]
"
`;

exports[`dehydrate > dehydrate V1 Map{ 'apple' => 1, 'banana' => 2, 'pineapple' => 3 } undefined 1`] = `
"[
"Flatpack JSON v1",
[5,2,6],
[0,3,4,5],
"apple",
"banana",
"pineapple",
[0,7,8,9],
1,
2,
3
]
"
`;

exports[`dehydrate > dehydrate V1 Set{ 'apple', 'banana', 'pineapple' } undefined > optimized 1`] = `
"[
"Flatpack JSON v1",
[4,2],
[0,3,4,5],
"apple",
"banana",
"pineapple"
]
"
`;

exports[`dehydrate > dehydrate V1 Set{ 'apple', 'banana', 'pineapple' } undefined 1`] = `
"[
"Flatpack JSON v1",
[4,2],
[0,3,4,5],
"apple",
"banana",
"pineapple"
]
"
`;

exports[`dehydrate > dehydrate V1 Set{ 'pineapple', 'apple', 'banana' } undefined > optimized 1`] = `
"[
"Flatpack JSON v1",
[4,2],
[0,3,4,5],
"pineapple",
"apple",
"banana"
]
"
`;

exports[`dehydrate > dehydrate V1 Set{ 'pineapple', 'apple', 'banana' } undefined 1`] = `
"[
"Flatpack JSON v1",
[4,2],
[0,3,4,5],
"pineapple",
"apple",
"banana"
]
"
`;

exports[`dehydrate > dehydrate V1 false undefined > optimized 1`] = `
"[
"Flatpack JSON v1",
false
]
"
`;

exports[`dehydrate > dehydrate V1 false undefined 1`] = `
"[
"Flatpack JSON v1",
false
]
"
`;

exports[`dehydrate > dehydrate V1 null undefined > optimized 1`] = `
"[
"Flatpack JSON v1",
null
]
"
`;

exports[`dehydrate > dehydrate V1 null undefined 1`] = `
"[
"Flatpack JSON v1",
null
]
"
`;

exports[`dehydrate > dehydrate V1 true undefined > optimized 1`] = `
"[
"Flatpack JSON v1",
true
]
"
`;

exports[`dehydrate > dehydrate V1 true undefined 1`] = `
"[
"Flatpack JSON v1",
true
]
"
`;

exports[`dehydrate > dehydrate V1 undefined undefined > optimized 1`] = `
"[
"Flatpack JSON v1"
]
"
`;

exports[`dehydrate > dehydrate V1 undefined undefined 1`] = `
"[
"Flatpack JSON v1"
]
"
`;

exports[`dehydrate > dehydrate V2 'string' undefined > optimized 1`] = `
"[
"Flatpack JSON v2",
[128,"string"],
[2,-1]
]
"
`;

exports[`dehydrate > dehydrate V2 'string' undefined 1`] = `
"[
"Flatpack JSON v2",
[128,"string"],
[2,-1]
]
"
`;

exports[`dehydrate > dehydrate V2 /[\\p{L}\\p{M}]+/gu undefined > optimized 1`] = `
"[
"Flatpack JSON v2",
[128,"[\\\\p{L}\\\\p{M}]+","gu"],
[6,-1,-2]
]
"
`;

exports[`dehydrate > dehydrate V2 /[\\p{L}\\p{M}]+/gu undefined 1`] = `
"[
"Flatpack JSON v2",
[128,"[\\\\p{L}\\\\p{M}]+","gu"],
[6,-1,-2]
]
"
`;

exports[`dehydrate > dehydrate V2 [ 'apple', 'banana', 'apple', 'banana', 'apple', 'pineapple' ] undefined > optimized 1`] = `
"[
"Flatpack JSON v2",
[128,"apple","banana","pineapple"],
[0,-1,-2,-1,-2,-1,-3]
]
"
`;

exports[`dehydrate > dehydrate V2 [ 'apple', 'banana', 'apple', 'banana', 'apple', 'pineapple' ] undefined 1`] = `
"[
"Flatpack JSON v2",
[128,"apple","banana","pineapple"],
[0,-1,-2,-1,-2,-1,-3]
]
"
`;

exports[`dehydrate > dehydrate V2 [ 'pineapple', 'apple', 'grape', 'banana', 'apple', 'banana', 'apple', …(1) ] undefined > optimized 1`] = `
"[
"Flatpack JSON v2",
[128,"apple","pineapple","banana","grape"],
[0,-2,-1,-4,-3,-1,-3,-1,-2]
]
"
`;

exports[`dehydrate > dehydrate V2 [ 'pineapple', 'apple', 'grape', 'banana', 'apple', 'banana', 'apple', …(1) ] undefined 1`] = `
"[
"Flatpack JSON v2",
[128,"pineapple","apple","grape","banana"],
[0,-1,-2,-3,-4,-2,-4,-2,-1]
]
"
`;

exports[`dehydrate > dehydrate V2 [ /[\\p{L}\\p{M}]+/gu, /[\\p{L}\\p{M}]+/gu, /[\\p{Lu}\\p{M}]+/gu ] undefined > optimized 1`] = `
"[
"Flatpack JSON v2",
[128,"gu","[\\\\p{L}\\\\p{M}]+","[\\\\p{Lu}\\\\p{M}]+"],
[0,3,3,4],
[6,-2,-1],
[6,-3,-1]
]
"
`;

exports[`dehydrate > dehydrate V2 [ /[\\p{L}\\p{M}]+/gu, /[\\p{L}\\p{M}]+/gu, /[\\p{Lu}\\p{M}]+/gu ] undefined 1`] = `
"[
"Flatpack JSON v2",
[128,"[\\\\p{L}\\\\p{M}]+","gu","[\\\\p{Lu}\\\\p{M}]+"],
[0,3,3,4],
[6,-1,-2],
[6,-3,-2]
]
"
`;

exports[`dehydrate > dehydrate V2 [ { a: 'a', b: 'b' }, { a: 'a', b: 'b' }, { a: 'a', b: 'b' }, …(1) ] { dedupe: false } > optimized 1`] = `
"[
"Flatpack JSON v2",
[128,"a","b"],
[0,4,5,6,7],
[0,-1,-2],
[1,3,3],[1,3,3],[1,3,3],[1,3,3]
]
"
`;

exports[`dehydrate > dehydrate V2 [ { a: 'a', b: 'b' }, { a: 'a', b: 'b' }, { a: 'a', b: 'b' }, …(1) ] { dedupe: false } 1`] = `
"[
"Flatpack JSON v2",
[128,"a","b"],
[0,3,5,6,7],
[1,4,4],
[0,-1,-2],
[1,4,4],[1,4,4],[1,4,4]
]
"
`;

exports[`dehydrate > dehydrate V2 [ { a: 'a', b: 'b' }, { a: 'a', b: 'b' }, { a: 'a', b: 'b' }, …(1) ] {} > optimized 1`] = `
"[
"Flatpack JSON v2",
[128,"a","b"],
[0,3,3,3,3],
[1,4,4],
[0,-1,-2]
]
"
`;

exports[`dehydrate > dehydrate V2 [ { a: 'a', b: 'b' }, { a: 'a', b: 'b' }, { a: 'a', b: 'b' }, …(1) ] {} 1`] = `
"[
"Flatpack JSON v2",
[128,"a","b"],
[0,3,3,3,3],
[1,4,4],
[0,-1,-2]
]
"
`;

exports[`dehydrate > dehydrate V2 [ { a: 'a', b: 'b' }, { a: 'c', b: 'd' }, { b: 'b', a: 'a' }, …(2) ] undefined > optimized 1`] = `
"[
"Flatpack JSON v2",
[128,"a","b","c","d"],
[0,4,5,4,7,8],
[0,-1,-2],
[1,3,3],
[1,3,6],
[0,-3,-4],
[0,-1,-2],
[0,-3,-4]
]
"
`;

exports[`dehydrate > dehydrate V2 [ { a: 'a', b: 'b' }, { a: 'c', b: 'd' }, { b: 'b', a: 'a' }, …(2) ] undefined 1`] = `
"[
"Flatpack JSON v2",
[128,"a","b","c","d"],
[0,3,5,3,7,8],
[1,4,4],
[0,-1,-2],
[1,4,6],
[0,-3,-4],
[0,-1,-2],
[0,-3,-4]
]
"
`;

exports[`dehydrate > dehydrate V2 [ {}, {}, {} ] undefined > optimized 1`] = `
"[
"Flatpack JSON v2",
[128],
[0,3,3,3],
{}
]
"
`;

exports[`dehydrate > dehydrate V2 [ {}, {}, {} ] undefined 1`] = `
"[
"Flatpack JSON v2",
[128],
[0,3,3,3],
{}
]
"
`;

exports[`dehydrate > dehydrate V2 [ 1, 2 ] undefined > optimized 1`] = `
"[
"Flatpack JSON v2",
[128],
[0,3,4],
1,
2
]
"
`;

exports[`dehydrate > dehydrate V2 [ 1, 2 ] undefined 1`] = `
"[
"Flatpack JSON v2",
[128],
[0,3,4],
1,
2
]
"
`;

exports[`dehydrate > dehydrate V2 [ 1n, 'hello', /\\w+/g, {}, [], 'hello' ] undefined > optimized 1`] = `
"[
"Flatpack JSON v2",
[128,"hello","\\\\w+","g"],
[0,4,3,7,8,9,3],
[1,0,-1],
[1,0,5],
[8,6],
1,
[6,-2,-3],
{},
[0]
]
"
`;

exports[`dehydrate > dehydrate V2 [ 1n, 'hello', /\\w+/g, {}, [], 'hello' ] undefined 1`] = `
"[
"Flatpack JSON v2",
[128,"hello","\\\\w+","g"],
[0,3,6,7,8,9,6],
[1,0,4],
[8,5],
1,
[1,0,-1],
[6,-2,-3],
{},
[0]
]
"
`;

exports[`dehydrate > dehydrate V2 [ 1n, 2n, 1n, 2n, 9007199254740991n, -9007199254740991n, …(2) ] undefined > optimized 1`] = `
"[
"Flatpack JSON v2",
[128,"9007199254740992","-9007199254740992"],
[0,3,4,3,4,7,9,11,12],
[8,5],
[8,6],
1,
2,
[8,8],
9007199254740991,
[8,10],
-9007199254740991,
[8,-1],
[8,-2]
]
"
`;

exports[`dehydrate > dehydrate V2 [ 1n, 2n, 1n, 2n, 9007199254740991n, -9007199254740991n, …(2) ] undefined 1`] = `
"[
"Flatpack JSON v2",
[128,"9007199254740992","-9007199254740992"],
[0,3,5,3,5,7,9,11,12],
[8,4],
1,
[8,6],
2,
[8,8],
9007199254740991,
[8,10],
-9007199254740991,
[8,-1],
[8,-2]
]
"
`;

exports[`dehydrate > dehydrate V2 [ Array(3) ] undefined > optimized 1`] = `
"[
"Flatpack JSON v2",
[128],
[0,3,3,4],
[7,1704067200000],
[7,1704153600000]
]
"
`;

exports[`dehydrate > dehydrate V2 [ Array(3) ] undefined 1`] = `
"[
"Flatpack JSON v2",
[128],
[0,3,3,4],
[7,1704067200000],
[7,1704153600000]
]
"
`;

exports[`dehydrate > dehydrate V2 [] undefined > optimized 1`] = `
"[
"Flatpack JSON v2",
[128],
[0]
]
"
`;

exports[`dehydrate > dehydrate V2 [] undefined 1`] = `
"[
"Flatpack JSON v2",
[128],
[0]
]
"
`;

exports[`dehydrate > dehydrate V2 { a: [ 1 ] } undefined > optimized 1`] = `
"[
"Flatpack JSON v2",
[128,"a"],
[1,3,6],
[0,-1],
[0,5],
1,
[0,4]
]
"
`;

exports[`dehydrate > dehydrate V2 { a: [ 1 ] } undefined 1`] = `
"[
"Flatpack JSON v2",
[128,"a"],
[1,3,6],
[0,-1],
[0,5],
1,
[0,4]
]
"
`;

exports[`dehydrate > dehydrate V2 { a: { a: 'a', b: 'b' }, b: { a: 'c', b: 'd' }, …(11) } undefined > optimized 1`] = `
"[
"Flatpack JSON v2",
[128,"a","b","r","c","d","apple","banana","pineapple","cValues","m","mm","n","nn","nnn","rValues","s","ss","values","[\\\\p{L}\\\\p{M}]+","gu","rr"],
[1,14,21],
[0,-1,-2],
[6,-19,-20],
[1,3,3],
[0,-1,-2],
[1,3,15],
[0,5,7,5,6,11,4,12],
[0,-6,-7,-8],
[5,6,6],
[0,-4,-5],
[1,16,17],
[4,20],
[0,-1,-2,-9,-10,-11,-12,-13,-14,-3,-15,-16,-17,-18],
[0,-4,-5],
[0,-3,-21],
[0,4,4],
[0,-8,-7,-6],
[1,3,3],
[0,5,7,19,6,11,4,12],
[0,5,7,9,10,10,8,8,8,4,18,13,13,9]
]
"
`;

exports[`dehydrate > dehydrate V2 { a: { a: 'a', b: 'b' }, b: { a: 'c', b: 'd' }, …(11) } undefined 1`] = `
"[
"Flatpack JSON v2",
[128,"a","b","cValues","m","mm","n","nn","nnn","r","rValues","s","ss","values","c","d","apple","banana","pineapple","[\\\\p{L}\\\\p{M}]+","gu","rr"],
[1,3,21],
[0,-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,-11,-12,-13],
[1,5,5],
[0,-1,-2],
[1,5,7],
[0,-14,-15],
[0,-16,-17,-18],
[5,10,10],
[0,-1,-2],
[0,4,6,4,10,12,13,14],
[0,-14,-15],
[6,-19,-20],
[1,15,16],
[0,-9,-21],
[0,13,13],
[0,-18,-17,-16],
[4,20],
[1,5,5],
[0,4,6,19,10,12,13,14],
[0,4,6,8,9,9,11,11,11,13,17,18,18,8]
]
"
`;

exports[`dehydrate > dehydrate V2 { a: { a: 'a', b: 42 } } undefined > optimized 1`] = `
"[
"Flatpack JSON v2",
[128,"a","b"],
[1,3,8],
[0,-1],
[1,5,7],
[0,-1,-2],
42,
[0,-1,6],
[0,4]
]
"
`;

exports[`dehydrate > dehydrate V2 { a: { a: 'a', b: 42 } } undefined 1`] = `
"[
"Flatpack JSON v2",
[128,"a","b"],
[1,3,8],
[0,-1],
[1,5,7],
[0,-1,-2],
42,
[0,-1,6],
[0,4]
]
"
`;

exports[`dehydrate > dehydrate V2 { a: { b: 1 } } undefined > optimized 1`] = `
"[
"Flatpack JSON v2",
[128,"a","b"],
[1,3,8],
[0,-1],
[1,5,7],
[0,-2],
1,
[0,6],
[0,4]
]
"
`;

exports[`dehydrate > dehydrate V2 { a: { b: 1 } } undefined 1`] = `
"[
"Flatpack JSON v2",
[128,"a","b"],
[1,3,8],
[0,-1],
[1,5,7],
[0,-2],
1,
[0,6],
[0,4]
]
"
`;

exports[`dehydrate > dehydrate V2 { a: 1 } undefined > optimized 1`] = `
"[
"Flatpack JSON v2",
[128,"a"],
[1,3,5],
[0,-1],
1,
[0,4]
]
"
`;

exports[`dehydrate > dehydrate V2 { a: 1 } undefined 1`] = `
"[
"Flatpack JSON v2",
[128,"a"],
[1,3,5],
[0,-1],
1,
[0,4]
]
"
`;

exports[`dehydrate > dehydrate V2 { fruit: [ 'apple', 'banana', 'apple', 'banana', 'apple', 'pineapple' ], …(2) } undefined > optimized 1`] = `
"[
"Flatpack JSON v2",
[128,"apple","banana","fruit","joinFruit","sentence","pineapple","apple-banana-apple-banana-apple-pineapple","There is a bit of fruit on the table. Some banana, apple, and pineapple."],
[1,3,5],
[0,-3,-4,-5],
[0,-1,-2,-1,-2,-1,-6],
[0,4,-7,-8]
]
"
`;

exports[`dehydrate > dehydrate V2 { fruit: [ 'apple', 'banana', 'apple', 'banana', 'apple', 'pineapple' ], …(2) } undefined 1`] = `
"[
"Flatpack JSON v2",
[128,"fruit","joinFruit","sentence","apple","banana","pineapple","apple-banana-apple-banana-apple-pineapple","There is a bit of fruit on the table. Some banana, apple, and pineapple."],
[1,3,5],
[0,-1,-2,-3],
[0,-4,-5,-4,-5,-4,-6],
[0,4,-7,-8]
]
"
`;

exports[`dehydrate > dehydrate V2 { values: [ '', 'apple', 'banana', 'pineapple' ], …(1) } undefined > optimized 1`] = `
"[
"Flatpack JSON v2",
[128,"apple","banana","pineapple","set","values",""],
[1,3,7],
[0,-4,-5],
[4,5],
[0,-1,-2,-3],
[0,-6,-1,-2,-3],
[0,4,6]
]
"
`;

exports[`dehydrate > dehydrate V2 { values: [ '', 'apple', 'banana', 'pineapple' ], …(1) } undefined 1`] = `
"[
"Flatpack JSON v2",
[128,"set","values","apple","banana","pineapple",""],
[1,3,7],
[0,-1,-2],
[4,5],
[0,-3,-4,-5],
[0,-6,-3,-4,-5],
[0,4,6]
]
"
`;

exports[`dehydrate > dehydrate V2 { values: [ 'apple', 'banana', 'pineapple' ], …(1) } undefined > optimized 1`] = `
"[
"Flatpack JSON v2",
[128,"set","values","apple","banana","pineapple"],
[1,4,6],
[0,-3,-4,-5],
[0,-1,-2],
[4,3],
[0,5,3]
]
"
`;

exports[`dehydrate > dehydrate V2 { values: [ 'apple', 'banana', 'pineapple' ], …(1) } undefined 1`] = `
"[
"Flatpack JSON v2",
[128,"set","values","apple","banana","pineapple"],
[1,3,6],
[0,-1,-2],
[4,5],
[0,-3,-4,-5],
[0,4,5]
]
"
`;

exports[`dehydrate > dehydrate V2 {} undefined > optimized 1`] = `
"[
"Flatpack JSON v2",
[128],
{}
]
"
`;

exports[`dehydrate > dehydrate V2 {} undefined 1`] = `
"[
"Flatpack JSON v2",
[128],
{}
]
"
`;

exports[`dehydrate > dehydrate V2 1 undefined > optimized 1`] = `
"[
"Flatpack JSON v2",
[128],
1
]
"
`;

exports[`dehydrate > dehydrate V2 1 undefined 1`] = `
"[
"Flatpack JSON v2",
[128],
1
]
"
`;

exports[`dehydrate > dehydrate V2 1.1 undefined > optimized 1`] = `
"[
"Flatpack JSON v2",
[128],
1.1
]
"
`;

exports[`dehydrate > dehydrate V2 1.1 undefined 1`] = `
"[
"Flatpack JSON v2",
[128],
1.1
]
"
`;

exports[`dehydrate > dehydrate V2 Map{ 'apple' => 1, 'banana' => 2, 'pineapple' => 3 } undefined > optimized 1`] = `
"[
"Flatpack JSON v2",
[128,"apple","banana","pineapple"],
[5,3,4],
[0,-1,-2,-3],
[0,5,6,7],
1,
2,
3
]
"
`;

exports[`dehydrate > dehydrate V2 Map{ 'apple' => 1, 'banana' => 2, 'pineapple' => 3 } undefined 1`] = `
"[
"Flatpack JSON v2",
[128,"apple","banana","pineapple"],
[5,3,4],
[0,-1,-2,-3],
[0,5,6,7],
1,
2,
3
]
"
`;

exports[`dehydrate > dehydrate V2 Set{ 'apple', 'banana', 'pineapple' } undefined > optimized 1`] = `
"[
"Flatpack JSON v2",
[128,"apple","banana","pineapple"],
[4,3],
[0,-1,-2,-3]
]
"
`;

exports[`dehydrate > dehydrate V2 Set{ 'apple', 'banana', 'pineapple' } undefined 1`] = `
"[
"Flatpack JSON v2",
[128,"apple","banana","pineapple"],
[4,3],
[0,-1,-2,-3]
]
"
`;

exports[`dehydrate > dehydrate V2 Set{ 'pineapple', 'apple', 'banana' } undefined > optimized 1`] = `
"[
"Flatpack JSON v2",
[128,"pineapple","apple","banana"],
[4,3],
[0,-1,-2,-3]
]
"
`;

exports[`dehydrate > dehydrate V2 Set{ 'pineapple', 'apple', 'banana' } undefined 1`] = `
"[
"Flatpack JSON v2",
[128,"pineapple","apple","banana"],
[4,3],
[0,-1,-2,-3]
]
"
`;

exports[`dehydrate > dehydrate V2 false undefined > optimized 1`] = `
"[
"Flatpack JSON v2",
[128],
false
]
"
`;

exports[`dehydrate > dehydrate V2 false undefined 1`] = `
"[
"Flatpack JSON v2",
[128],
false
]
"
`;

exports[`dehydrate > dehydrate V2 null undefined > optimized 1`] = `
"[
"Flatpack JSON v2",
[128],
null
]
"
`;

exports[`dehydrate > dehydrate V2 null undefined 1`] = `
"[
"Flatpack JSON v2",
[128],
null
]
"
`;

exports[`dehydrate > dehydrate V2 true undefined > optimized 1`] = `
"[
"Flatpack JSON v2",
[128],
true
]
"
`;

exports[`dehydrate > dehydrate V2 true undefined 1`] = `
"[
"Flatpack JSON v2",
[128],
true
]
"
`;

exports[`dehydrate > dehydrate V2 undefined undefined > optimized 1`] = `
"[
"Flatpack JSON v2",
[128]
]
"
`;

exports[`dehydrate > dehydrate V2 undefined undefined 1`] = `
"[
"Flatpack JSON v2",
[128]
]
"
`;

exports[`v2 update value > object reuse > diff flat0 -> flat1 1`] = `
"Index: data.json
===================================================================
--- data.json
+++ data.json
@@ -1,11 +1,15 @@
 [
 "Flatpack JSON v2",
 [128,"a","c","b"],
-[1,4,8],
+[1,4,12],
 [1,5,7],
 [0,-1,-2],
 [0,-3],
 1,
 [0,6],
-[0,3,3]
+[],
+[1,5,11],
+2,
+[0,10],
+[0,9,3]
 ]
"
`;

exports[`v2 update value > object reuse > diff flat1 -> flat2 1`] = `
"Index: data.json
===================================================================
--- data.json
+++ data.json
@@ -1,15 +1,16 @@
 [
 "Flatpack JSON v2",
-[128,"a","c","b"],
-[1,4,12],
+[128,"a","c","b","d"],
+[1,8,13],
 [1,5,7],
-[0,-1,-2],
+[],
 [0,-3],
 1,
 [0,6],
-[],
+[0,-1,-3,-2,-4],
 [1,5,11],
 2,
 [0,10],
-[0,9,3]
+[],
+[0,9,3,3,3]
 ]
"
`;

exports[`v2 update value > object reuse > flat0 1`] = `
"[
"Flatpack JSON v2",
[128,"a","c","b"],
[1,4,8],
[1,5,7],
[0,-1,-2],
[0,-3],
1,
[0,6],
[0,3,3]
]
"
`;

exports[`v2 update value > object reuse > flat1 1`] = `
"[
"Flatpack JSON v2",
[128,"a","c","b"],
[1,4,12],
[1,5,7],
[0,-1,-2],
[0,-3],
1,
[0,6],
[],
[1,5,11],
2,
[0,10],
[0,9,3]
]
"
`;

exports[`v2 update value > object reuse > flat2 1`] = `
"[
"Flatpack JSON v2",
[128,"a","c","b","d"],
[1,8,13],
[1,5,7],
[],
[0,-3],
1,
[0,6],
[0,-1,-3,-2,-4],
[1,5,11],
2,
[0,10],
[],
[0,9,3,3,3]
]
"
`;

exports[`v2 update value > object reuse with option meta data > flat0 1`] = `
"[
"Flatpack JSON v2",
[128,"a","c","b"],
[1,4,8],
[1,5,7],
[0,-1,-2],
[0,-3],
1,
[0,6],
[0,3,3]
]
"
`;

exports[`v2 update value > object reuse with option meta data > flat1 1`] = `
"[
"Flatpack JSON v2",
[128,"a","c","b"],
[1,4,12],
[1,5,7],
[0,-1,-2],
[0,-3],
1,
[0,6],
[],
[1,5,11],
2,
[0,10],
[0,9,3]
]
"
`;
